# uvicorn-gunicorn-docker

./: README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: issue-manager.yml  latest-changes.yml
docker-images/: mambaforge.dockerfile  mambaforge3.10.dockerfile  mambaforge3.9.dockerfile  miniforge3.10.dockerfile  miniforge3.9.dockerfile  miniforge3.dockerfile  python3.10-alpine.dockerfile  python3.10-slim.dockerfile  python3.10.dockerfile  python3.9-alpine.dockerfile  python3.9-alpine3.13.dockerfile  python3.9-slim.dockerfile  python3.9.dockerfile
scripts/: build-push.sh  build.sh  deploy.sh  docker-login.sh  process_all.py  trigger-children.sh
tests/: utils.py
tests/test_01_main/: test_defaults.py  test_env_vars_1.py  test_env_vars_2.py  test_env_vars_3.py
tests/test_03_reload/: test_defaults.py  test_env_vars_1.py  test_env_vars_2.py
