[tool.poetry]
name = "uvicorn-gunicorn-docker"
version = "1.0.0"
description = "Docker image with Uvicorn managed by Gunicorn for high-performance web applications in Python 3.9 with performance auto-tuning. Optionally with Alpine Linux."
authors = ["Sebastián Ramírez <tiangolo@gmail.com>", "Anton Petrov <anton.a.petrov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
docker = "^5.0.3"
pytest = "^7.1.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
autoflake = "^1.4.0"
mypy = "^0.942"

[build-system]
requires = ["poetry>=1.12"]
build-backend = "poetry.masonry.api"
